Bug 65355 - UI: Comments button (ruler control) is disappears in some cases
Summary: UI: Comments button (ruler control) is disappears in some cases
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Rodolfo
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-04 14:25 UTC by pierre-yves samyn
Modified: 2013-11-21 16:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-06-04 14:25:30 UTC
Hello

Steps to Reproduce:

1. File> New> Text
2. Type text (for example, Test)
3. Insert> Comment (Ctrl + Alt + C)
(enter any comment)

Expected & actual results: Comments button in Rule

4. Insert> Header

The Comment button disappears (but  is actually functional). Just bring the mouse on its location to see it.

Note: The button disappears even if you insert a comment in the header (footer). 

Regards
Pierre-Yves
Comment 1 Jacques Guilleron 2013-06-04 15:23:55 UTC
Hi Pierre-Yves,

I confirm this behaviour with
LO 4.2.0.0.alpha0+ Build ID: 60790b3f0ccc1779bcff2ddcc278a9027aedabe
Windows 7 Home Premium

Jacques Guilleron
Comment 2 Commit Notification 2013-11-20 11:49:22 UTC
Rodolfo Ribeiro Gomes committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=912d6d171603cdc68c600ab713e22eeca2c1f58a

fdo#65355 Ruler Comment control doesn't disappears



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 pierre-yves samyn 2013-11-21 16:00:46 UTC
Hello

(In reply to comment #2)
> Rodolfo Ribeiro Gomes committed a patch related to this issue.
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=912d6d171603cdc68c600ab713e22eeca2c1f58a
> ...
> Affected users are encouraged to test the fix and report feedback.

WORKSFORME with windows 7/64 & Version: 4.2.0.0.alpha1+
Build ID: 6788b92e15889beb151baf2b8ca8719f6ea38481
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-21_02:40:15

Thank you
Regards
Pierre-Yves