fdo#65355 Ruler Comment control doesn't disappears

ImplDraw() should not be directly called because it avoids
overriden Paint() method.

Change-Id: I0f0f6b4af231c1ea50a23fb96f3c9018b5ce2d31
Signed-off-by: Rodolfo Ribeiro Gomes <rodolforg@gmail.com>